# OsBridgeLCCA

./: .gitignore  COMPREHENSIVE_MAPPING_IMPLEMENTATION.md  CONTRIBUTING.md  DATA_MAPPING_SUMMARY.md  ERROR_AND_MAPPING_REPORT.md  EXCEL_DATA_MAPPING_GUIDE.md  LICENSE  QUICK_REFERENCE_EXCEL_MAPPING.md  README.md  check_syntax.py  install.bat  install.sh  pyproject.toml  user_materials.db
cicd/docker/: Dockerfile  docker-compose.yml
cicd/github_actions/: main.yml
osbridgelcca/backend/: config.py  main.py
osbridgelcca/core/: bridge_lcc.py  config.py  cost_component.py  input_data.py
osbridgelcca/data/databases/: regional_rates.sql
osbridgelcca/desktop_app/: .gitignore  __main__.py  home_window.py  main_template.py
osbridgelcca/desktop_app/core/: data_manager.py  database.py  lifecycle_manager.py  material_db_manager.py
osbridgelcca/desktop_app/graphs/: bar_graph.py  bubble_graph.py  data.csv  data1.csv  pie_chart.py  radial_bar_graph.py
osbridgelcca/desktop_app/widgets/: comparison_widget.py  demolition_and_recycling_data.py  project_details_left_widget.py  project_details_right_widget.py  results_widget.py  tab_widget.py  title_bar.py  tutorial_widget_left.py
osbridgelcca/projects/: project_manager.db
osbridgelcca/web_app/public/: index.html
scripts/: verify_installation.py
src/: reproduce_issue.py
src/osbridgelcca.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/integration_tests/: test_api.py  test_ui.py
tests/unit_tests/: conftest.py  test_calculations.py  test_visualization.py
widgets/utils/: structure_works.db
(+150 files in other folders)
